# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import runsRouter from "./runs";
+import territoryRouter from "./territory";
+import usersRouter from "./users";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(runsRouter);
+router.use(territoryRouter);
+router.use(usersRouter);
 
 export default router;
